<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ylanarchi.curso3semana2.MainActivity">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"/>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/miActionBar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/textInputLayoutUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_username"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/datePicker"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutUserName"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:clickable="false"
        android:datePickerMode="spinner"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false" />

    <android.support.design.widget.TextInputLayout

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/textInputLayoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePicker"
            android:hint="@string/form_phone"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/textInputLayoutemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutPhone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutPhone"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutemail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputMail"
            android:hint="@string/form_contact_description"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/siguienteButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/form_contact_boton_siguiente" />
</RelativeLayout>
